# fund-autopsy

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
data/graveyard/: graveyard.csv
data/universes/: tdf_all.txt  top50_active.txt
docs/: corrections.md  data_sources.md  filing_coverage.md  index.html  limitations.md  methodology.md  style.css
docs/funds/: AADTX.html  ABALX.html  ABNDX.html  AEPGX.html  AGTHX.html  AHITX.html  AIVSX.html  AMCPX.html  AMECX.html  AMRMX.html  ANCFX.html  ANWPX.html  AWSHX.html  BAGIX.html  CAIBX.html  CWGIX.html  DODFX.html  DODGX.html  DODIX.html  FBALX.html  FBGRX.html  FCNTX.html  FDIVX.html  FFFHX.html  FKGRX.html  FLPSX.html  FMAGX.html  FPURX.html  FSPHX.html  JLGRX.html  LPSFX.html  MWTRX.html  OAKMX.html  OLGAX.html  PIMIX.html  PONAX.html  PRGFX.html  PRNHX.html  PRWCX.html  PTTAX.html  (+12 more)
fundautopsy/: __init__.py  batch.py  cli.py  config.py  doctor.py  graveyard.py  site.py  wrapper.py
research/: README.md  working_paper_01_beneath_the_expense_ratio.md
scripts/: check_pseudonymity.sh  pseudonymity_patterns.example
tests/: conftest.py  test_american_funds_fee_parser.py  test_api_endpoints_integration.py  test_assumptions.py  test_batch_site.py  test_bond_fund_handling.py  test_cash_drag.py  test_census.py  test_config.py  test_cost_computation.py  test_data_modules.py  test_etf_detection.py  test_exports.py  test_fee_parser.py  test_fee_tracker.py  test_fidelity_series_fee_parser.py  test_fund_detection.py  test_html_export.py  test_icf_walker.py  test_impact.py  test_leaderboard.py  test_n14_parser.py  test_ncen_parser.py  test_nport_derivatives.py  test_nport_parser.py  test_obfuscation.py  test_portfolio.py  test_prospectus.py  test_retail_view.py  test_rollup.py  test_spread.py  test_structure_recursion.py  test_tax_drag.py  test_views.py  test_walker_cache.py  test_web_app.py  test_web_helpers.py  test_xbrl_fee_parser.py
(+145 files in other folders)
